<fix> letter spacing slider about

--- a/styles/style.css
+++ b/styles/style.css
@@ -534,6 +534,7 @@ dialog > * {
     line-height: 1.3;
     position: relative; 
     padding-bottom: 1.2rem;
+    letter-spacing: 0 !important;
 }
 
 .slider-about p::after {
